kubernetes/IngressRules/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculatrice-ingress
  namespace: wachofi-ouali
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-wachofi-ouali-polytech-dijon.kiowy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
